--- a/index.html
+++ b/index.html
@@ -1,35 +1,65 @@
-<html><head><meta charset="utf-8"></head>
+<meta charset="utf-8">
+
 <style>
-.bdiv {
-	display:inline-block;
+
+body {
+	background-color: #118181;
+	height: 100%;
+	margin: 0;
 }
 
-
-.button {
-  background-color: #aaaaaa;
-  border: none;
-	  height:64px;
-    width:128px;
-		margin: 0 auto;
-			margin-bottom: 4px;
-			display: block;
+button {
+	background-color: #c1c1c1;
+	height: 100%;
+	width: 100%;
 }
+
+.bGrid {
+	width: 100%;
+	height: 1%;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+}
+
+.bCell {
+	color: #29410f;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.page {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+}
+
+.page .line.drawArea {
+  flex: 0 1 auto;
+  text-align: center;
+}
+
+.page .line.buttonArea {
+  flex: 1 1 auto;
+}
+
 </style>
-<body style="margin: 0px; overflow: hidden;">
-	<canvas style="border: 0px;" id="canvas" width="512" height="512"></canvas>
-	<div>
-	<div class="bdiv">
-	<button class="button" id="left">L</button>
+
+<div class="page">
+	<div class="line drawArea">
+		<canvas id="canvas" width="512" height="512"></canvas>
 	</div>
-	<div class="bdiv">
-	<button class="button" id="up">U</button>
-	<button class="button" id="down">D</button>
+	<div class="line buttonArea bGrid">
+		<div class="bCell"></div>
+		<div class="bCell" id="up"><button></button></div>
+		<div class="bCell"></div>
+		<div class="bCell" id="left"><button></button></div>
+		<div class="bCell" id="down"><button></button></div>
+		<div class="bCell" id="right"><button></button></div>
 	</div>
-	<div class="bdiv">
-	<button class="button" id="right">R</button>
-	</div>
-	</div>
-	<script type="text/javascript">
+</div>
+
+<script type="text/javascript">
 		"use strict";
 
 		var canvas = document.getElementById('canvas');
@@ -255,4 +285,4 @@
 			if (event.key === 'ArrowLeft') commander.add(-1, 0);
 			if (event.key === 'ArrowRight') commander.add(1, 0);
 		});
-</script></body></html>
+</script>
