--- a/index.html
+++ b/index.html
@@ -4,58 +4,56 @@
 
 body {
 	background-color: #118181;
-	height: 100%;
 	margin: 0;
 }
 
 button {
 	background-color: #c1c1c1;
-	height: 100%;
 	width: 100%;
 }
 
-.bGrid {
-	width: 100%;
-	height: 1%;
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-}
-
-.bCell {
+.cell {
 	color: #29410f;
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items: stretch;
 }
 
 .page {
-  display: flex;
-  flex-flow: column;
-  height: 100%;
+	display: flex;
+	flex-flow: column;
+	height: 100%;
 }
 
-.page .line.drawArea {
-  flex: 0 1 auto;
-  text-align: center;
+.draw {
+	flex: 0 1 auto;
+	text-align: center;
 }
 
-.page .line.buttonArea {
-  flex: 1 1 auto;
+.buttons {
+	padding: 4px;
+	gap: 2px;
+	height: 1px;
+	align-items: stretch;
+	flex: 1 1 auto;
+	width: 100%;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
 }
 
 </style>
 
 <div class="page">
-	<div class="line drawArea">
+	<div class="draw">
 		<canvas id="canvas" width="512" height="512"></canvas>
 	</div>
-	<div class="line buttonArea bGrid">
-		<div class="bCell"></div>
-		<div class="bCell" id="up"><button></button></div>
-		<div class="bCell"></div>
-		<div class="bCell" id="left"><button></button></div>
-		<div class="bCell" id="down"><button></button></div>
-		<div class="bCell" id="right"><button></button></div>
+	<div class="buttons">
+		<div class="cell"></div>
+		<div class="cell" id="up"><button></button></div>
+		<div class="cell"></div>
+		<div class="cell" id="left"><button></button></div>
+		<div class="cell" id="down"><button></button></div>
+		<div class="cell" id="right"><button></button></div>
 	</div>
 </div>
 
