--- a/pixelPerfect.html
+++ b/pixelPerfect.html
@@ -1,6 +1,6 @@
 <meta charset=utf-8>
-<meta name="viewport" content="initial-scale=1.0">
-
+<meta name="viewport" content="initial-scale=0.5">
+<meta name = "viewport" content = "user-scalable=no>
 <style>
 
 body
