--- a/pixelPerfect.html
+++ b/pixelPerfect.html
@@ -1,7 +1,7 @@
 <meta charset=utf-8>
 <meta name="viewport" content="initial-scale=0.5">
 <meta name = "viewport" content = "user-scalable=no">
-<meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=device-width*2">
 <style>
 
 body
