--- a/pixelPerfect.html
+++ b/pixelPerfect.html
@@ -1,7 +1,7 @@
 <meta charset=utf-8>
-<meta name="viewport" content="initial-scale=0.5">
+<meta name="viewport" content="initial-scale=1.0">
 <meta name = "viewport" content = "user-scalable=no">
-<meta name="viewport" content="width=device-height*2">
+<meta name="viewport" content="width=device-height">
 <style>
 
 body
