--- a/pixelPerfect.html
+++ b/pixelPerfect.html
@@ -2,6 +2,7 @@
 <meta name="viewport" content="initial-scale=0.5">
 <meta name = "viewport" content = "user-scalable=no">
 <meta name="viewport" content="width=640">
+<meta name="apple-mobile-web-app-capable" content="yes" />
 <style>
 
 body
