--- a/pixelPerfect.html
+++ b/pixelPerfect.html
@@ -3,7 +3,7 @@
 <meta name = "viewport" content = "user-scalable=no">
 <meta name="viewport" content="width=640">
 <meta name="apple-mobile-web-app-capable" content="yes" />
-<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-title" content="Set">
 <style>
 
