--- a/pixelPerfect.html
+++ b/pixelPerfect.html
@@ -1,7 +1,7 @@
 <meta charset=utf-8>
 <meta name="viewport" content="initial-scale=0.5">
 <meta name = "viewport" content = "user-scalable=no">
-<meta name="viewport" content="width=640">
+<meta name="viewport" content="width=device-width*2">
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-title" content="Set">
